# pyhanabi

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  consent.py  game.py  hanabi.py  httpui.py  llm_log.txt  logging.py  pyproject.toml  self_intentional_with_memory.py  serverconf.py  tutorial.py  utils.py
metrics/: post_move.py  test_synergy.py
players/: LLM_Agent.py  __init__.py  adapted_llm.py  base.py  deepseek_llm.py  fully_intentional.py  hanasim.py  inner_state.py  intentional.py  outer_state.py  prompts.py  sampling_recognition.py  self_intentional.py  self_intentional_detect_dead_colors.py  self_intentional_with_memory.py  self_recognition.py  timed.py
tests/: test_decks.py
