[project]
name = "pyhanabi"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "numpy>=2.2.3",
    "pandas>=2.3.3",
    "openai>=1.0.0",
    "python-Levenshtein>=0.27.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "ruff~=0.12.1",
]
